appId: ${APP_ID}
env:
    FIRST_PDF_ROW_ID_MATCH: 'erste-statement-008, pdf'
    SECOND_PDF_ROW_ID_MATCH: 'erste-statement-009, pdf'
---
- extendedWaitUntil:
      visible:
          id: 'TabBar.Home'
      timeout: 15000

- runFlow:
      when:
          notVisible: 'No accounts yet'
      file: subflows/import/clear-data-from-settings.flow.yaml

- evalScript: ${output.phase = 'clear-state-import'}

- runFlow: subflows/accounts/open-new-account.flow.yaml

- scrollUntilVisible:
      element:
          text: '.*Erste Bank.*'
      direction: DOWN
      timeout: 10000
      visibilityPercentage: 50
      speed: 20

- tapOn:
      text: '.*Erste Bank.*'

- runFlow:
      file: subflows/import/import-erste-pdf-from-picker.flow.yaml
      env:
          PDF_ROW_ID_MATCH: ${FIRST_PDF_ROW_ID_MATCH}

- scrollUntilVisible:
      element:
          id: 'AccountCard.Erste EUR'
      direction: DOWN
      timeout: 10000

- assertVisible:
      id: 'AccountCard.Balance.Erste_EUR._477_73'

- tapOn:
      id: 'AccountCard.Erste EUR'

- extendedWaitUntil:
      visible:
          id: 'AccountDetails.EditButton'
      timeout: 10000

- extendedWaitUntil:
      visible:
          id: 'TransactionCard.Label.Sample_Counterparty'
      timeout: 20000

- tapOn:
      id: 'PageHeader.BackButton'

- extendedWaitUntil:
      visible:
          id: 'AccountCard.Erste EUR'
      timeout: 10000

- evalScript: ${output.phase = 'existing-account-quick-import'}

- longPressOn:
      id: 'AccountCard.Erste EUR'

- runFlow:
      file: subflows/import/select-file-from-app-provider.flow.yaml
      env:
          FILE_ROW_ID_MATCH: ${SECOND_PDF_ROW_ID_MATCH}

- extendedWaitUntil:
      visible:
          id: 'AccountCard.Balance.Erste_EUR._3412_05'
      timeout: 3000

- tapOn:
      id: 'AccountCard.Erste EUR'

- extendedWaitUntil:
      visible:
          id: 'AccountDetails.EditButton'
      timeout: 10000

- scrollUntilVisible:
      element:
          id: 'TransactionCard.Label.AREALIS_GmbH'
      direction: DOWN
      timeout: 20000
      speed: 20
      visibilityPercentage: 30
