appId: ${APP_ID}
---

- tapOn:
    id: 'TabBar.Transactions'
- extendedWaitUntil:
    visible: 'Transactions'

- tapOn: 'E2E Edited Income'
- waitForAnimationToEnd

- tapOn:
    id: 'TransactionActionsMenu.TriggerButton'
- waitForAnimationToEnd

- tapOn:
    id: 'TransactionActionsMenu.DeleteButton'

- tapOn: 'Delete'

- extendedWaitUntil:
    visible: 'Transactions'

- assertNotVisible: 'E2E Edited Income'
